# scheme-interpreter

./: CMakeLists.txt  LICENSE  Makefile  README.md  benchmark.sh  callgrind.out.19530  code.scm  common.cpp  common.hpp  display.cpp  environment.cpp  environment.hpp  eval  evaluation.cpp  evaluation.hpp  execution.cpp  expressions.cpp  expressions.hpp  interface.hpp  interpreter  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  main.cpp  memory.cpp  memory.hpp  parser.cpp  parser.hpp  parsing.cpp  parsing.hpp  primitives.cpp  primitives.hpp  readme.md  readme.txt  scheme  stringify.cpp  stringify.hpp  syntax.cpp  tco.cpp  (+4 more)
builtins/: common.hpp  data.cpp  misc.cpp  numeric.cpp  predicates.cpp
include/builtins/: common.hpp  installer.hpp  preamble.hpp
include/core/: environment.hpp  evaluation.hpp  expressions.hpp  interpreter.hpp  memory.hpp  types.hpp
include/interpreter/: environment.hpp  evaluation.hpp  expressions.hpp  input.hpp  interpreter.hpp  lexer.hpp  memory.hpp  parser.hpp  repl.hpp  types.hpp
include/parsing/: lexer.hpp  parser.hpp
scheme-interpreter/: execution.cpp  interface.hpp  interpreter.cpp  parsing.cpp  primitives.cpp  readme.txt  syntax.cpp
src/: main.cpp
src/builtins/: data.cpp  installer.cpp  misc.cpp  numeric.cpp  preamble.cpp  predicates.cpp
src/core/: environment.cpp  evaluation.cpp  expressions.cpp  interpreter.cpp  memory.cpp  types.cpp
src/interpreter/: environment.cpp  evaluation.cpp  expressions.cpp  input.cpp  interpreter.cpp  lexer.cpp  memory.cpp  parser.cpp  repl.cpp  types.cpp
src/parsing/: lexer.cpp  parser.cpp
